2013-04-02  Mario Pulido <mario.pulido@artica.es>     

	* godmode/category/category.php,
       include/help/en/help_categories.php,
       include/help/es/help_categories.php: Added help in categories menu


2013-04-02  Junichi Satoh  <junichi@rworks.jp>
	
	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	pandoradb.sql, pandoradb.postgreSQL.sql, pandoradb.oracle.sql,
	godmode/alerts/alert_special_days.php,
	godmode/alerts/configure_alert_special_days.php: Added group ACL to
	'Special days list'.

2013-04-01 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/events.php, mobile/include/ui.class.php,
	mobile/include/style/main.css: changes for to show better the tables
	with reflow and responsive.

2013-04-01 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/events.php, mobile/include/style/main.css: first
	version of custom responsive view for details events.

2013-04-01  Sancho Lerena <slerena@artica.es>

	* operation/agentes/sla_view.php,
	operation/agentes/ver_agente.php: Removed old "SLA view", now unused.

	* general/error_authconfig.php,
	general/error_dbconfig.php,	
	general/error_emptyconfig.php,
	general/error_install.php,
	general/error_noconfig.php,
	general/error_perms.php,
	general/login_page.php,
	general/logoff.php,
	include/styles/pandora.css,
	include/styles/pandora_black.css,
	include/styles/pandora_minimal.css: replaced PNG images for JPG version, much lighter.

	* images/header_f2.jpg,
	images/header_f2b.jpg,
	images/login_background.jpg: New JPG version of old PNG images.

	* images/header_f2.png,
	images/header_f2b.png,
	images/login_background.png: Removed PNG's.

	(merged from 4.0 branch)

2013-03-31  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_network_map_enterprise.php: Updated help.

2013-03-27 Miguel de Dios <miguel.dedios@artica.es>
	