@@ -31,14 +31,31 @@ label, input, .ui-btn-inner {
 	border-bottom: 3px solid white !important;
 }
 
+
+
 tr.group_view_crit, .group_view_crit {
 	background-color: #FA3030;
 	color: #000000 !important;
 }
-
 .group_view_crit * {
 	color: #000000 !important;
 }
+.ui-btn-up-group_view_crit {
+	background: linear-gradient(#D50505, #FA3030) repeat scroll 0 0 #FA3030;
+	border: 1px solid #111111;
+	color: #000000;
+	font-weight: bold;
+	text-shadow: none;
+}
+.ui-btn-hover-group_view_crit {
+	background: linear-gradient(#C41616, #E94141) repeat scroll 0 0 #E94141;
+	border: 1px solid #111111;
+	color: #000000;
+	font-weight: bold;
+	text-shadow: none;
+}
+
+
 
 .group_view_normal, .group_view_normal *,
 .group_view_norm, .group_view_norm * {
@@ -48,6 +65,24 @@ tr.group_view_crit, .group_view_crit {
 .group_view_norm * {
 	color: #000000 !important;
 }
+.ui-btn-up-group_view_normal,
+.ui-btn-up-group_view_norm {
+	background: linear-gradient(#D7D7D7, #FFFFFF) repeat scroll 0 0 #FFFFFF;
+	border: 1px solid #111111;
+	color: #000000;
+	font-weight: bold;
+	text-shadow: none;
+}
+.ui-btn-hover-group_view_normal,
+.ui-btn-hover-group_view_normal {
+	background: linear-gradient(#D7D7D7, #FFFFFF) repeat scroll 0 0 #FFFFFF;
+	border: 1px solid #111111;
+	color: #000000;
+	font-weight: bold;
+	text-shadow: none;
+}
+
+
 
 .group_view_ok, .group_view_ok * {
 	background-color: #00C000;
@@ -56,6 +91,22 @@ tr.group_view_crit, .group_view_crit {
 .group_view_ok * {
 	color: #000000 !important;
 }
+.ui-btn-up-group_view_ok {
+	background: linear-gradient(#007000, #00C000) repeat scroll 0 0 #00C000;
+	border: 1px solid #111111;
+	color: #000000;
+	font-weight: bold;
+	text-shadow: none;
+}
+.ui-btn-hover-group_view_ok {
+	background: linear-gradient(#096709, #0FB10F) repeat scroll 0 0 #0FB10F;
+	border: 1px solid #111111;
+	color: #000000;
+	font-weight: bold;
+	text-shadow: none;
+}
+
+
 
 tr.group_view_warn, .group_view_warn, tr.group_view_warn.a, a.group_view_warn, tr.a.group_view_warn {
 	background-color: #F5E535;
@@ -63,6 +114,22 @@ tr.group_view_warn, .group_view_warn, tr.group_view_warn.a, a.group_view_warn, t
 a.group_view_warn {
 	color: #000000 !important;
 }
+.ui-btn-up-group_view_warn {
+	background: linear-gradient(#D0BF0A, #F5E535) repeat scroll 0 0 #F5E535;
+	border: 1px solid #111111;
+	color: #000000;
+	font-weight: bold;
+	text-shadow: none;
+}
+.ui-btn-hover-group_view_warn {
+	background: linear-gradient(#BFB11B, #E4D746) repeat scroll 0 0 #E4D746;
+	border: 1px solid #111111;
+	color: #000000;
+	font-weight: bold;
+	text-shadow: none;
+}
+
+
 
 tr.group_view_alrm, .group_view_alrm {
 	background-color: #ED8701;
@@ -70,6 +137,22 @@ tr.group_view_alrm, .group_view_alrm {
 .group_view_alrm * {
 	color: #000000 !important;
 }
+.ui-btn-up-group_view_alrm {
+	background: linear-gradient(#9D5A01, #ED8701) repeat scroll 0 0 #ED8701;
+	border: 1px solid #111111;
+	color: #000000;
+	font-weight: bold;
+	text-shadow: none;
+}
+.ui-btn-hover-group_view_alrm {
+	background: linear-gradient(#91580D, #DA8414) repeat scroll 0 0 #DA8414;
+	border: 1px solid #111111;
+	color: #000000;
+	font-weight: bold;
+	text-shadow: none;
+}
+
+
 
 tr.group_view_unk, .group_view_unk {
 	background-color: #C4C4C4;
@@ -77,6 +160,22 @@ tr.group_view_unk, .group_view_unk {
 .group_view_unk * {
 	color: #000000 !important;
 }
+.ui-btn-up-group_view_unk {
+	background: linear-gradient(#9C9C9C, #C4C4C4) repeat scroll 0 0 #C4C4C4;
+	border: 1px solid #111111;
+	color: #000000;
+	font-weight: bold;
+	text-shadow: none;
+}
+.ui-btn-hover-group_view_unk {
+	background: linear-gradient(#888888, #B0B0B0) repeat scroll 0 0 #ECECEC;
+	border: 1px solid #111111;
+	color: #000000;
+	font-weight: bold;
+	text-shadow: none;
+}
+
+
 
 tr.group_view_data, .group_view_data {
 	color: #000000 !important;
@@ -107,40 +206,40 @@ tr.group_view_data, .group_view_data {
 
 /*INIT----------Events styles-----------------------------------------*/
 .datos_green, .datos_greenf9, .datos_green a, .datos_greenf9 a {
-    background-color: #52A000;
-    color: #FFFFFF !important;
-    text-shadow: none !important;
+	background-color: #52A000;
+	color: #FFFFFF !important;
+	text-shadow: none !important;
 }
 .datos_red, .datos_redf9, .datos_red a, .datos_redf9 a {
-    background-color: #FF3E41;
-    color: #FFFFFF !important;
-    text-shadow: none !important;
+	background-color: #FF3E41;
+	color: #FFFFFF !important;
+	text-shadow: none !important;
 }
 
 .datos_yellow, .datos_yellowf9, .datos_yellow a, .datos_yellowf9 a {
-    background-color: #F5E535;
-    color: #000000 !important;
-    text-shadow: none !important;
+	background-color: #F5E535;
+	color: #000000 !important;
+	text-shadow: none !important;
 }
 .datos_blue, .datos_bluef9, .datos_blue a, .datos_bluef9 a {
-    background-color: #77E2F2;
-    color: #000000 !important;
-    text-shadow: none !important;
+	background-color: #77E2F2;
+	color: #000000 !important;
+	text-shadow: none !important;
 }
 .datos_grey, .datos_greyf9, .datos_grey a, .datos_greyf9 a {
-    background-color: #E4E4E4;
-    color: #000000 !important;
-    text-shadow: none !important;
+	background-color: #E4E4E4;
+	color: #000000 !important;
+	text-shadow: none !important;
 }
 .datos_pink, .datos_pinkf9, .datos_pink a, .datos_pinkf9 a {
-    background-color: #FF92E9;
-    color: #000000 !important;
-    text-shadow: none !important;
+	background-color: #FF92E9;
+	color: #000000 !important;
+	text-shadow: none !important;
 }
 .datos_brown, .datos_brownf9, .datos_brown a, .datos_brownf9 a {
-    background-color: #C97A4A;
-    color: #000000 !important;
-    text-shadow: none !important;
+	background-color: #C97A4A;
+	color: #000000 !important;
+	text-shadow: none !important;
 }
 
 tr.events {
@@ -295,18 +394,20 @@ table#list_events th {
 
 /*INIT-----------Agents styles----------------------------------------*/
 .red, .redb, .redi, .error {
-    color: #CC0000;
+	color: #CC0000;
 }
 
 .green {
-    color: #5A8629;
+	color: #5A8629;
 }
 
 .grey {
-    color: #808080;
-    font-weight: bold;
+	color: #808080;
+	font-weight: bold;
 }
 /*END-----------Agents styles-----------------------------------------*/
+
+
 
 
 
@@ -320,6 +421,13 @@ table#list_events th {
 }
 /*END----------Fix the square border in search input------------------*/
 
+
+
+
+ul.ui-listview li.ui-btn div.ui-btn-inner div.ui-btn-text {
+	padding-top: 5px;
+	padding-left: 5px;
+}
 
 
 
@@ -343,19 +451,21 @@ table#list_events th {
 
 
 
+
+
 /*INIT---------Fix to avoid clicks under loading message--------------*/
 .ui-loader-background {
-    width:100% !important;
-    height:100% !important;
-    top:0 !important;
-    margin: 0 !important;
-    background: rgba(0, 0, 0, 0.3) !important;
-    display:none !important;
-    position: fixed !important;
-    z-index:100 !important;
+	width:100% !important;
+	height:100% !important;
+	top:0 !important;
+	margin: 0 !important;
+	background: rgba(0, 0, 0, 0.3) !important;
+	display:none !important;
+	position: fixed !important;
+	z-index:100 !important;
 }
 
 .ui-loading .ui-loader-background {
-    display:block !important;
+	display:block !important;
 }
 /*END----------Fix to avoid clicks under loading message--------------*/
