@@ -27,11 +27,10 @@ class Groups {
 			$this->correct_acl = true;
 			
 			$this->groups = $this->getListGroups();
-			
-			foreach ($this->groups as $key => $group) {
-				$this->status[$key] = $group['status'];
-				unset($this->groups[$key]['status']);
-			}
+			//~ foreach ($this->groups as $key => $group) {
+				//~ $this->status[$key] = $group['status'];
+				//~ unset($this->groups[$key]['status']);
+			//~ }
 		}
 		else {
 			$this->correct_acl = false;
@@ -68,11 +67,68 @@ class Groups {
 		$ui->showFooter(false);
 		$ui->beginContent();
 			
-			$table = new Table();
-			$table->setClass('group_view');
-			$table->importFromHash($this->groups);
-			$table->setRowClass($this->status);
-			$ui->contentAddHtml($table->getHTML());
+			$ui->contentAddHtml('<div data-role="collapsible-set" data-theme="a" data-content-theme="d">');
+				$count = 0;
+				foreach ($this->groups as $group) {
+					$ui->contentAddHtml('
+						<style type="text/css">
+							.ui-icon-group_' . $count . ' {
+								background: url("' . $group['group_icon'] . '") no-repeat scroll 0 0 transparent !important;
+							}
+						</style>
+						');
+					$ui->contentAddHtml('<div data-collapsed-icon="group_' . $count . '" ' .
+						'data-expanded-icon="group_' . $count . '" ' .
+						'data-iconpos="right" data-role="collapsible" ' .
+						'data-collapsed="true" data-theme="' . $group['status'] . '" data-content-theme="d">');
+					$ui->contentAddHtml('<h4>' . $group['group_name'] . '</h4>');
+					$ui->contentAddHtml('<ul data-role="listview">');
+					$ui->contentAddHtml('<li>' .
+						__('Agents') .
+						' ' . $group[__('Agents')] .
+						'</li>');
+					$ui->contentAddHtml('<li>' .
+						__('Agents unknown') .
+						' ' . $group[__('Agents unknown')] .
+						'</li>');
+					$ui->contentAddHtml('<li>' .
+						__('Unknown') .
+						' ' . $group[__('Unknown')] .
+						'</li>');
+					$ui->contentAddHtml('<li>' .
+						__('Not init') .
+						' ' . $group[__('Not init')] .
+						'</li>');
+					$ui->contentAddHtml('<li>' .
+						__('Normal') .
+						' ' . $group[__('Normal')] .
+						'</li>');
+					$ui->contentAddHtml('<li>' .
+						__('Warning') .
+						' ' . $group[__('Warning')] .
+						'</li>');
+					$ui->contentAddHtml('<li>' .
+						__('Critical') .
+						' ' . $group[__('Critical')] .
+						'</li>');
+					$ui->contentAddHtml('<li>' .
+						__('Alerts fired') .
+						' ' . $group[__('Alerts fired')] .
+						'</li>');
+					$ui->contentAddHtml('</ul>');
+					$ui->contentAddHtml('</div>');
+					
+					$count++;
+				}
+			$ui->contentAddHtml('</div>');
+			
+			//$ui->contentAddHtml(ob_get_clean());
+			//~ $table = new Table();
+			//~ $table->setId('list_groups');
+			//~ $table->setClass('group_view');
+			//~ $table->importFromHash($this->groups);
+			//~ $table->setRowClass($this->status);
+			//~ $ui->contentAddHtml($table->getHTML());
 			
 		$ui->endContent();
 		$ui->showPage();
@@ -105,6 +161,7 @@ class Groups {
 		// For each valid group for this user, take data from agent and modules
 		foreach ($groups as $id_group => $group) {
 			$rows = groups_get_group_row($id_group, $groups, $group, $printed_groups, false);
+			
 			if (!empty($rows))
 				$return = array_merge($return, $rows);
 		}
